# Flux

./: .gitignore  CMakeLists.txt  COMPILER_PROJECT.md  Dockerfile  InstallationLog.txt  README.md  build.ps1  flux.bat  flux_wasm.js  flux_wasm.wasm  index.html  test_dot.fl  test_dot.ll  test_milestone.fl  test_type_error.fl
.github/workflows/: deploy.yml
assets/: index-2ybDB1Uv.css  index-B4rv0fQS.css  index-BBfUyFWi.js  index-BCcQVntY.css  index-BDY21snr.css  index-BGuuXRlt.js  index-BRgyjjOS.css  index-Bbq2IvJv.js  index-BgAUzMr1.css  index-BruttK96.js  index-C-iE33U1.js  index-C3peP2gN.js  index-CAZz6p0S.css  index-CHhBAgMn.js  index-CJuWcnG2.js  index-ClRqlyFq.css  index-D1ZXWUo1.js  index-DRHQQI4J.js  index-DY7ah-eC.js  index-Dh8L5oNh.css  index-Dtjx1AKM.js  index-Dv9VY32Y.css  index-M1BD2Frd.js  index-PLu7G8UW.js  index-_CWjD1ha.css  index-ehMyMdeM.css  index-nG0RFodA.css  index-tnywZfW0.js  index-uJgajYnZ.js  index-vGIb07fs.css  index-wl0jPmyA.css
backend/: server.py
benchmarks/: bigdot.c  bigdot.fl  bigdot.py  dot.c  dot.fl  dot.py  relu.c  relu.fl  relu.py  saxpy.c  saxpy.fl  saxpy.py
compiler/: main.cpp
compiler/backend/: codegen.cpp  codegen.hpp  native.cpp  native.hpp
compiler/frontend/: ast.hpp  dumper.cpp  dumper.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  typechecker.cpp  typechecker.hpp  types.hpp  wasm_bindings.cpp
compiler/midend/: ir.cpp  ir.hpp  lower_from_ast.cpp  lower_from_ast.hpp  passes.cpp  passes.hpp
docs/: BUILD.md  LANGUAGE.md
examples/: arrays.fl  control_flow.fl  functions.fl  hello.fl  loops.fl  neuron.fl  optimizations.fl
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  AstGraph.tsx  flux.d.ts
frontend/src/components/: BenchmarksPage.tsx  DocsPane.tsx  Footer.tsx  InspectorNav.tsx  Sidebar.tsx  WelcomeBanner.tsx
frontend/src/data/: docsSections.ts  examples.ts
tests/: CMakeLists.txt  test_helpers.hpp  test_lexer.cpp  test_parser.cpp  test_passes.cpp  test_typechecker.cpp
wasm/: CMakeLists.txt
